fix styling up z-index to go over swiper slide. fix header shadow not going to edges.

--- a/components/ProjectCard/ProjectCard.module.css
+++ b/components/ProjectCard/ProjectCard.module.css
@@ -14,8 +14,8 @@
     background-color: #373737;
     align-items: center;
     padding: 20px 25px;
-    box-shadow: 0px 8px 4px -4px rgba(0, 0, 0, 0.35);
-    z-index: 1;
+    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.35);
+    z-index: 2;
 }
 .nav {
     display: flex;
